# foat

./: .gitignore  Cargo.toml  README.md  claude.md  justfile
.cargo/: config.toml
