[package]
edition = "2021"
name = "foat"
version = "0.1.0"

[[bin]]
name = "foat"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
embedded-dht-rs = { version = "0.4.0", features = ["dht22"] }
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "esp-alloc",
  "esp32s3",
  "log",
  "utils",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
static_cell = { version = "2.1.0", features = ["nightly"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dhcpv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
